<resources>
    <string name="app_name">Treasure Hunter</string>
    <string name="By_Rishi">By Rishi Dholliwar</string>
    <string name="By_Ali">By Ali Maladwala</string>
    <string name="Main_Menu">Main\nMenu</string>
    <string name="Play_Game">Play Game</string>
    <string name="Options">Options</string>
    <string name="Help">Help</string>
    <string name="Settings">Settings</string>
    <string name="Board_size">Board size</string>
    <string name="Num_Mines"># Mines</string>


    <string-array name="Spin_Board_sizes">
        <item>4 x 6</item>
        <item>5 x 10</item>
        <item>6 x 15</item>
    </string-array>

    <string-array name="Spin_Mine_Num">
        <item>6</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>
    <string name="Erase_times_played">Erase times played</string>
    <string name="title_activity_play_game">PlayGameActivity</string>

    <string name="a_red_gem">A red gem</string>
    <string name="Reset_Best_Score">Reset best score</string>
    <string name="Times_Played">Times Played:</string>

    <string name="about_game_text">

    </string>
    <string name="Help_Text">
        Welcome to Treasure Hunter.\n\n
        How To Play:\n
       \t To play the game press PLAY GAME on the main menu. Then select a tile to search for treasure,
        If you find a treasure an image of a gem will appear, otherwise a number will appear that
        shows you the amount of hidden treasure in the same row and column as the tile you just clicked.
        Find all the treasure to win!\n\n

        Info:\n
        \tThis Treasure Hunter game was developed by Rishi and Ali for the
        CMPT 276 class at:\n
        http://www.cs.sfu.ca/CourseCentral/276/bfraser/index.html)\n\n

        Credits:\n
         \tJewel Icon made by:\n
        http://www.flaticon.com/authors/madebyoliver from www.flaticon.com\n\n
         \tRock Icon made by:\n
        http://opengameart.org/content/29-grounds-and-walls-and-water-1024x1024.\n\n
        \tChest Icon made by:\n
        http://www.flaticon.com/free-icon/chest_332026 from www.flaticon.com\n\n
        \tSounds generated using BFXR:\n
        http://www.bfxr.net/\n\n
        \tHelm Icon made by:\n
        http://www.flaticon.com/free-icon/helm_293510 from www.flaticon.com\n\n
        \tScroll Icon on Welcome screen made by:
        http://www.flaticon.com/free-icon/open-scroll-outline_32571 from www.flaticon.com\n\n
        \tScroll Icon on Main Menu screen made by:\n
        http://www.freeiconspng.com/free-images/scroll-png-26405\n\n
       \t Pirate Ship Icon made by:\n
        http://image-bros.club/p/pirate-ship-png.html\n\n
        \t Welcome and Main Menu background made by: \n
        https://pixabay.com/en/background-treasure-map-map-1675212/\n\n
        \t Play Game, Options and Help background made by:\n
        http://www.georgemaps.com/travel-map-background-why-i-m-backpacking-around-the-world-travels-without-pants-oldworldmap/\n\n




    </string>

     <string name="jewelImageCredit">\n


    </string>
    <string name="best_score">Best Score:</string>

</resources>
