<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rdhol.mineseeker.WelcomeScreen">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="68dp"
        android:text="@string/By_Rishi" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginTop="29dp"
        android:text="@string/By_Ali" />

    <Button
        android:id="@+id/btn_MainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:text="@string/Main_Menu" />

    <TextView
        android:id="@+id/tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="41dp"
        android:layout_toLeftOf="@+id/btn_MainMenu"
        android:layout_toStartOf="@+id/btn_MainMenu"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#F00"
        android:textSize="30sp"
        android:textStyle="normal|bold|italic" />

    <ImageView
        android:id="@+id/image_DiamondLeft"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignTop="@+id/tittle"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_toLeftOf="@+id/tittle"
        android:layout_toStartOf="@+id/tittle"
        android:contentDescription="@string/a_red_gem"
        app:srcCompat="@drawable/diamond256" />

    <ImageView
        android:id="@+id/image_DiamondRight"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignEnd="@+id/btn_MainMenu"
        android:layout_alignRight="@+id/btn_MainMenu"
        android:layout_alignTop="@+id/tittle"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        android:contentDescription="@string/a_red_gem"
        app:srcCompat="@drawable/diamond256" />

</RelativeLayout>
