<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pirate_map"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rdhol.mineseeker.MainMenu">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        app:srcCompat="@drawable/scroll3" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView5"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/imageView5"
        android:layout_marginEnd="144dp"
        android:layout_marginRight="144dp"
        android:layout_marginTop="57dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_PlayGame"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_Help"
            android:layout_marginBottom="7dp"
            android:fontFamily="cursive"
            android:text="@string/Play_Game"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/btn_Options"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_Help"
            android:layout_alignBottom="@+id/btn_Help"
            android:layout_centerHorizontal="true"
            android:fontFamily="cursive"
            android:text="@string/Options"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/btn_Help"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_alignEnd="@+id/btn_PlayGame"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/btn_PlayGame"
            android:layout_marginBottom="59dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="cursive"
            android:text="@string/Help"
            android:textSize="18sp"
            android:textStyle="normal|bold" />
    </LinearLayout>

</RelativeLayout>
